# gensee-crate

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
bench/: README.md  plot_latency.py
crate/gensee-crate-attribution/: Cargo.toml
crate/gensee-crate-attribution/src/: lib.rs  process_tree.rs
crate/gensee-crate-cli/: Cargo.toml
crate/gensee-crate-cli/src/: bench.rs  command_parse.rs  daemon.rs  hook_compatibility.rs  main.rs  policy_eval.rs  preexec.rs  resource_governance.rs  run.rs  tclone.rs  telemetry.rs  tests.rs  timeline.rs  watch.rs
crate/gensee-crate-core/: Cargo.toml
crate/gensee-crate-core/src/: apply_patch.rs  events.rs  hooks.rs  lib.rs  mcp.rs  path.rs  redact.rs  sessions.rs  vscode.rs
crate/gensee-crate-core/src/cross_session/: fingerprint.rs  mod.rs  rules.rs
crate/gensee-crate-linux/: Cargo.toml
crate/gensee-crate-linux/src/: audit.rs  capabilities.rs  enforcement.rs  fanotify.rs  lib.rs  network.rs  policy.rs  procfs.rs  seccomp.rs  session.rs
crate/gensee-crate-macos/: Cargo.toml
crate/gensee-crate-macos/src/: endpoint.rs
crate/gensee-crate-ml/: Cargo.toml
crate/gensee-crate-ml/src/: lib.rs
crate/gensee-crate-rules/: Cargo.toml
crate/gensee-crate-rules/policy/: default-policy.json  policy.schema.json
crate/gensee-crate-rules/src/: lib.rs  policy.rs
crate/gensee-crate-store/: Cargo.toml
crate/gensee-crate-store/src/: concurrency_tests.rs  lib.rs
dashboards/: README.md  index.html  package-lock.json  package.json  vite.config.ts
dashboards/server/: alerts.mjs  artifacts.mjs  db.mjs  events.mjs  feedback.mjs  index.mjs  metrics.mjs  policy.mjs  sessions.mjs  state.mjs  stats.mjs
dashboards/server/routes/v1/: alerts.mjs  artifacts.mjs  events.mjs  feedback.mjs  metrics.mjs  policy.mjs  sessions.mjs  state.mjs  stats.mjs
dashboards/showcase/: live-feed-replay.sql  product-tour.sql  transactions.sql  visible-fork-workflow.sql
dashboards/src/: App.tsx  main.tsx
dashboards/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
dashboards/src-tauri/capabilities/: main.json
dashboards/src-tauri/src/: lib.rs  main.rs
dashboards/src/api/: client.ts  types.ts
dashboards/src/components/: AlertDetails.tsx  EmptyPlaceholder.tsx  PageHeader.tsx  SeverityBadge.tsx  StatCard.tsx  ToolCallGraph.tsx
dashboards/src/hooks/: useApi.ts  useRealtime.ts  useTheme.tsx
dashboards/src/layouts/: AppLayout.tsx
dashboards/src/pages/: Alerts.tsx  Dashboard.tsx  Feedback.tsx  LineageGraph.tsx  LiveFeed.tsx  Policy.tsx  Sessions.tsx  Settings.tsx  Timeline.tsx  TodayHighlight.tsx  Transactions.tsx
dashboards/src/theme/: index.ts
dashboards/web/: DESIGN_CONTEXT.md  README.md  package.json
dashboards/web/scripts/: demo.sh  dev-server.mjs  seed-demo.sh
dashboards/web/src/: app.js  index.html  styles.css
db/: Cargo.toml  README.md  bench.py  populate_agent_events.py  queries.sql  schema.sql  sqlite.yaml
db/src/: sqlite.rs
docs/: README.md  antigravity-support.md  architecture.md  claude-code-hooks.md  codex-support.md  cursor-support.md  dashboard.md  endpoint-security.md  gensee-policy.md  gensee_database_design.html  index.md  lineage-graph.md  linux.md  policy.md  render_database_design.py  roadmap.md  run-and-sandbox.md  tclone.md  vscode-support.md  watch.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
docs/public/: CNAME
integrations/antigravity/: README.md
integrations/claude-code/: README.md
integrations/codex/: README.md  hooks.sample.json  smoke-permission-request-deny.json  smoke-pretool-deny.json
integrations/cursor/: README.md
integrations/generic-launcher/: README.md
integrations/mcp/: README.md
integrations/omnigent/: README.md
integrations/vscode/: README.md
models/: README.md
scripts/: anthropic_gateway.mjs  benchmark.sh  cleanup_tclone_host.sh  export_onnx.py  install_oss.sh  train_model.py
