[workspace]
members = [
    "crate/gensee-crate-core",
    "crate/gensee-crate-attribution",
    "crate/gensee-crate-rules",
    "crate/gensee-crate-store",
    "crate/gensee-crate-macos",
    "crate/gensee-crate-linux",
    "crate/gensee-crate-cli",
    "crate/gensee-crate-ml",
    "db",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/GenseeAI/gensee-crate"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
