[package]
name = "gensee-crate-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "gensee"
path = "src/main.rs"

[features]
# Off by default: production `cargo build` compiles none of the bench harness.
# `bench` adds the `gensee bench` subcommand + in-process driver (the e2e path
# runs the production pipeline unmodified). `bench-breakdown` is reserved for
# finer intra-evaluate phase markers and implies `bench`.
bench = []
bench-breakdown = ["bench"]

[dependencies]
gensee-crate-attribution = { path = "../gensee-crate-attribution" }
gensee-crate-core = { path = "../gensee-crate-core" }
gensee-crate-linux = { path = "../gensee-crate-linux" }
gensee-crate-rules = { path = "../gensee-crate-rules" }
gensee-crate-store = { path = "../gensee-crate-store" }
hmac = "0.12"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
libc = "0.2"
ureq = { version = "2.10", default-features = true, features = ["json"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
