[package]
name = "gensee-crate-linux"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gensee-crate-core = { path = "../gensee-crate-core" }
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
