[package]
name    = "gensee-dashboard"
version = "0.1.0"
edition = "2021"

# Keep this crate out of the monorepo's Cargo workspace — it has its own
# build toolchain (Tauri CLI) and different compilation targets.
[workspace]

[lib]
name       = "gensee_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri      = { version = "2", features = ["devtools"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
# Match gensee-crate-db: default stores use SQLCipher and require gensee.key.
# Bundling SQLCipher avoids a system library dependency and supports plaintext
# stores too when no key is required.
rusqlite   = { version = "0.32", features = ["bundled-sqlcipher"] }
hex        = "0.4"    # blob columns → hex strings
dirs       = "5"      # platform home dir for GENSEE_HOME fallback
getrandom  = "0.2"   # CSPRNG for temp-file name generation
